<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/email_subtitle"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_TIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:layout_below="@id/email_text_view"
            android:layout_marginTop="10dp"
            android:hint="@string/email_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_TIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/username_subtitle"
            android:layout_below="@id/name_TIL"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_TIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/username_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"

            android:hint="@string/login_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input_TIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/password_subtitle"
            android:layout_below="@id/username_input_TIL"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_TIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_hint"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_TIET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/password_input_TIL"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="20dp"
            android:text="@string/register_text"
            android:textAllCaps="false" />


    </RelativeLayout>


</RelativeLayout>