<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/name_string" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_text_view"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/date_string" />

        <TextView
            android:id="@+id/rating_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_text_view"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/rating_string"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/star_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_star_24" />

    </RelativeLayout>
</RelativeLayout>